...
        tabBarInactiveTintColor: tema.text.secondary,
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: 'Despensa',
          tabBarIcon: ({ color }) => <IconeSvg path={icones.tabDespensa} cor={String(color)} />,
        }}
      />
      <Tabs.Screen
        name="lista"
        options={{
          title: 'Lista',
          tabBarIcon: ({ color }) => <IconeSvg path={icones.tabLista} cor={String(color)} />,
        }}
      />
      <Tabs.Screen
        name="resumo"
        options={{
...
